<resources>
    <string name="app_name">project library</string>


    <!-- home strings -->
    <string name="categories_title">Categories</string>
    <string name="trending_title">Trending</string>
    <string name="see_all">see all</string>
    <string name="trending_subtitle">Discover what other people are reading</string>
    <string name="discover_more">discover more</string>

    <string name="book_details_rating">Rating</string>
    <string name="book_details_pages">Pages</string>
    <string name="book_details_language">Language</string>
    <string name="book_details_downloads">Downloads</string>
    <string name="books_details_Description">Description</string>
    <string name="book_details_btn_read_this_book">Read This Book</string>
    <string name="bookmarked">bookmarked</string>
    <string name="home">night</string>
    <string name="shares">share</string>
    <string name="screenshot">take screenshot</string>
    <string name="downloads_txt">Downloads</string>
    <string name="settings">Settings</string>
    <string name="language">App Language</string>


    <string-array name="language_values">
        <item>English</item>
        <item>العريية</item>
        <item>Kurdî</item>
    </string-array>

    <string name="default_language" translatable="false">English</string>
    <string name="search">search</string>
    <string name="search_result_header">searching results for : </string>


</resources>
