<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/home_bg_color"
    tools:context=".BookDetailsActivity">

        <!-- implement the back button functionality-->

        <ImageView
            android:id="@+id/back_btn"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="@dimen/home_margin_from_screen_for_boxes"/>

        <!-- check if downloaded before assigning an icon -->
        <ImageView
            android:id="@+id/book_download_btn"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_download"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="@dimen/home_margin_from_screen_for_boxes"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/image_card_for_positioning"
            android:layout_marginTop="@dimen/bookdetails_image_top_margin"
            android:layout_width="@dimen/book_details_image_width"
            android:layout_height="@dimen/book_details_image_height"
            android:layout_below="@id/back_btn"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="@dimen/default_radius_for_cards"
            app:cardElevation="@dimen/book_image_elevation">
            <ImageView
                android:id="@+id/book_details_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/home_header_bg"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/background_card_for_positioning"
            android:layout_below="@id/back_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardElevation="@dimen/cards_elevation"
            app:cardBackgroundColor="@color/whit_card_bg"
            android:backgroundTint="@color/whit_card_bg"
            android:background="@color/whit_card_bg"
            style="@style/CustomCardViewStyleForFragment"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="@dimen/book_details_card_top_margin"/>

        <ScrollView
            android:translationZ="90dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/image_card_for_positioning"
            android:layout_alignStart="@id/background_card_for_positioning"
            android:layout_alignEnd="@id/background_card_for_positioning">

                <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="30dp"
                    android:id="@+id/book_details_category_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/book_datails_category_text_shape"
                    android:paddingStart="7dp"
                    android:paddingEnd="7dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="@dimen/font_small"
                    android:textColor="@color/main_theme_color"
                    android:textAlignment="center"
                    android:text="category"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:id="@+id/book_details_author_name_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/book_details_category_txt"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/font_medium"
                    android:alpha="0.6"
                    android:textAlignment="center"
                    android:text="author name"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/book_details_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/book_details_author_name_txt"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/font_large"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="title"/>

                <LinearLayout
                    android:background="@drawable/book_info_layout_shape"
                    android:id="@+id/book_details_info_layout"
                    android:orientation="horizontal"
                    android:layout_below="@id/book_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:weightSum="4"
                    android:baselineAligned="false"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="15dp">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_extra_small"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:alpha="0.6"
                            android:text="@string/book_details_rating"/>
                        <TextView
                            android:id="@+id/book_details_rating_txt"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_extra_small"
                            android:textStyle="bold"
                            android:text="4.5"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_extra_small"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:alpha="0.6"
                            android:text="@string/book_details_pages"/>
                        <TextView
                            android:id="@+id/book_details_pages_txt"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_extra_small"
                            android:textStyle="bold"
                            android:text="358"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_extra_small"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:alpha="0.6"
                            android:text="@string/book_details_language"/>
                        <TextView
                            android:id="@+id/book_details_language_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="@dimen/font_extra_small"
                            android:textStyle="bold"
                            android:text="English"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_extra_small"
                            android:layout_gravity="center"
                            android:textAlignment="center"
                            android:alpha="0.6"
                            android:text="@string/book_details_downloads"/>
                        <TextView
                            android:id="@+id/book_details_downloads_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="@dimen/font_extra_small"
                            android:textStyle="bold"
                            android:text="4900"/>
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/description_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/book_details_info_layout"
                    android:textSize="@dimen/font_medium"
                    android:layout_marginStart="20dp"
                    android:text="@string/books_details_Description"
                    android:textAlignment="textStart"
                    android:alpha="0.6"/>
                <TextView
                    android:id="@+id/book_details_description_txt"
                    android:layout_marginTop="@dimen/home_margin_from_screen_for_titles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/description_title"
                    android:textSize="@dimen/font_medium"
                    android:layout_marginStart="20dp"
                    android:maxLines="50"
                    android:isScrollContainer="true"
                    android:overScrollMode="never"
                    android:scrollbars="none"
                    android:text="bla bla bla"/>


                    <com.google.android.material.button.MaterialButton
                        android:translationZ="90dp"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:id="@+id/read_book"
                        android:text="@string/book_details_btn_read_this_book"
                        android:gravity="center"
                        android:layout_below="@id/book_details_description_txt"
                        android:backgroundTint="@color/main_theme_color"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay_Button_custom_corners"
                        android:layout_marginStart="@dimen/home_margin_from_screen_for_boxes"
                        android:layout_marginEnd="@dimen/home_margin_from_screen_for_boxes"
                        android:layout_marginBottom="20dp"
                        android:drawableEnd="@drawable/ic_arrow_forward_24"
                        android:layout_marginTop="20dp"
                        />
            </RelativeLayout>

        </ScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>

